google auth implemented

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 PORT = 3001
 MONGO_URI = mongodb+srv://Eric:test@cluster0.jujju.mongodb.net/?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID = 237493030268-ngis9utrklvdrnfv7ds5a35gmfk5vjmk.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
